test/corpus/inline_function_simple_context.txt
================================================================================
Inline Function Simple Context
================================================================================

closure x(int a) {
  closure y = function int (int z) : int q = 10 {
    return q, z;
  };

  return y;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (non_void_type)
    (identifier)
    (parameter_list
      (parameter
        (non_void_type)
        (identifier)))
    (block
      (local_var_decl
        (non_void_type)
        (identifier)
        (inline_func
          (non_void_type)
          (parameter_list
            (parameter
              (non_void_type)
              (identifier)))
          (inline_context
            (local_var_decl_no_semi
              (non_void_type)
              (identifier)
              (number_literal)))
          (block
            (return_statement
              (identifier)
              (identifier)))))
      (return_statement
        (identifier)))))
