test/corpus/loop_controls.txt
================================================================================
Loop Control Statements
================================================================================

x() {
  for(int i = 0; i <= 10; i ++) {
    if(i == 8)
      break;
    else
      continue;
  }
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (for_statement
        (non_void_type)
        (identifier)
        (number_literal)
        (binary_expression
          (identifier)
          (number_literal))
        (update_expression
          (identifier))
        (block
          (if_statement
            (binary_expression
              (identifier)
              (number_literal))
            (break_statement)
            (continue_statement)))))))
