test/corpus/lvalue_expressions.txt
================================================================================
Lvalue Expression Test
================================================================================

int x = 10;

int *x2 = &x;

mixed x3 = &(x);

mixed x3 = &(foo());

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (number_literal))
  (global_var
    (non_void_type)
    (identifier)
    (lvalue_ref_expression
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (lvalue_ref_expression
      (identifier)))
  (global_var
    (non_void_type)
    (identifier)
    (lvalue_ref_expression
      (function_call
        (identifier)
        (argument_list)))))
