test/corpus/lwo_with_blueprint.txt
================================================================================
LWObject with Blueprint Constraint
================================================================================

lwobject "/obj/player.c" player = 0;

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type
      (string_literal))
    (identifier)
    (number_literal)))
