test/corpus/mapping_literal.txt
================================================================================
Mapping Literal Test
================================================================================

mapping x = ([ ]);
mapping x2 = ([ "keys", "only" ]);
mapping x2 = ([ "keys", "only", ]);
mapping x3 = ([ "key": "value", "key2": "value2" ]);
mapping x3 = ([ "key": "value", "key2": "value2", ]);
mapping x4 = ([ "key": "value"; 5, "key2": "value2"; 10 ]);

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)
    (mapping_literal))
  (global_var
    (non_void_type)
    (identifier)
    (mapping_literal
      (mapping_entry
        (string_literal))
      (mapping_entry
        (string_literal))))
  (global_var
    (non_void_type)
    (identifier)
    (mapping_literal
      (mapping_entry
        (string_literal))
      (mapping_entry
        (string_literal))))
  (global_var
    (non_void_type)
    (identifier)
    (mapping_literal
      (mapping_entry
        (string_literal)
        (string_literal))
      (mapping_entry
        (string_literal)
        (string_literal))))
  (global_var
    (non_void_type)
    (identifier)
    (mapping_literal
      (mapping_entry
        (string_literal)
        (string_literal))
      (mapping_entry
        (string_literal)
        (string_literal))))
  (global_var
    (non_void_type)
    (identifier)
    (mapping_literal
      (mapping_entry
        (string_literal)
        (string_literal)
        (number_literal))
      (mapping_entry
        (string_literal)
        (string_literal)
        (number_literal)))))
