test/corpus/modified_function.txt
================================================================================
Modified Function
================================================================================

public x() {
  return 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (type_modifier)
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (number)))))
