test/corpus/modified_multi_type_function.txt
================================================================================
Modified Multi Type Function
================================================================================

public varargs int|mapping|float x() {
  return 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (type_modifier)
    (type_modifier)
    (basic_type
      (non_void_type
        (single_non_void_type)
        (single_non_void_type)
        (single_non_void_type)))
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (number)))))
