test/corpus/multi_type_function.txt
================================================================================
Multi Type Function
================================================================================

int|struct Yo|mapping|float x() {
  return 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (non_void_type
      (struct_name
        (identifier)))
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (number_literal)))))
