test/corpus/multiple_pointer_global.txt
================================================================================
Multiple Pointer Global
================================================================================

int ***x;

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type)
    (identifier)))
