test/corpus/multiple_pointer_local.txt
================================================================================
Multiple Pointer Global
================================================================================

x(){int ***x;}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (local_var_decl
        (non_void_type)
        (identifier)))))
