test/corpus/object_with_blueprint.txt
================================================================================
Object with Blueprint Constraint
================================================================================

object "/obj/player.c" player = 0;

--------------------------------------------------------------------------------

(source_file
  (global_var
    (non_void_type
      (string_literal))
    (identifier)
    (number_literal)))
